Add #507: synchronize incoming folders with DAV
